--- a/dragAndDrop/example.html
+++ b/dragAndDrop/example.html
@@ -24,7 +24,7 @@
   line-height: 16px;
   box-shadow: inset 0 0 24px silver, 0 0 12px gray;
   z-index: 10;
-
+  opacity: 0.8;
   display: table;
 }
 
@@ -74,7 +74,12 @@ document.addEventListener('dragover', function (event) {
 }, false);
 
 document.addEventListener('dragstart', function (event) {
-  event.dataTransfer.setData('Text', event.target.getAttribute('data-x'));
+  if (event.target.tagName.toLowerCase() !== 'img' && event.target.tagName.toLowerCase() !== 'a') {
+    event.dataTransfer.setData('Text', event.target.getAttribute('data-x'));
+    event.dataTransfer.setDragImage(document.querySelector('img'), 0, 0);
+  } else {
+
+  }
 }, false);
 
 setTimeout(function () {
@@ -85,6 +90,9 @@ setTimeout(function () {
 }, 1);
 
 </script>
-<div class="dropzone" style="border:1px solid blue;width: 100px; height: 50px;">dropzone</div>
-<div draggable="true" data-x="12345" class="dropzone" style="border:1px solid blue;width: 100px; height: 50px;">dropzone</div>
+<a href="/asdf?sd">test url</a>
+<img src="https://developer.mozilla.org/@api/deki/files/80/=Canvas_drawimage2.jpg" />
+<img src="default.jpeg" />
+<div class="dropzone" style="border:1px solid blue;width: 400px; height: 50px;">dropzone</div>
+<div draggable="true" data-x="12345" class="dropzone" style="border:1px solid blue;width: 400px; height: 50px;">dropzone</div>
 <div draggable="true" id="dragme" data-x="!!! dropped" style="background:#eee">draggaple</div>
