--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="qunit.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="qunit.js"></script>
-    <script type="text/javascript" src="eventsource.js"></script>
-    <script type="text/javascript" src="tests.js"></script>
+    <script src="qunit.js"></script>
+    <script src="eventsource.js"></script>
+    <script src="tests.js"></script>
 </head>
 <body>
     <h1 id="qunit-header">QUnit tests for EventSource</h1>
