--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="qunit.css" type="text/css" media="screen" />
+    <script src="stop.js"></script>
     <script src="qunit.js"></script>
     <script src="eventsource.js"></script>
     <script src="tests.js"></script>
